--- a/web/WEB-INF/classes/StripesResources_ru_RU.properties
+++ b/web/WEB-INF/classes/StripesResources_ru_RU.properties
@@ -66,7 +66,7 @@ validation.mask.valueDoesNotMatch=<em>{1}</em> is not a valid {0}
 validation.expression.valueFailedExpression=The value supplied ({1}) for field {0} is invalid
 validation.file.postBodyTooBig=Total upload size of {3} KB exceeds the maximum size of {2} KB
 
-button.login=Login
-login=Login
-title.welcome=Welcome
-message.welcome=Welcome to
+button.login=\u0412\u043e\u0439\u0442\u0438
+login=\u041f\u0440\u0438\u043d\u044f\u0442\u044c
+title.welcome=\u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c
+message.welcome=\u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432
