--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -70,3 +70,7 @@ button.login=\u0412\u043e\u0439\u0442\u0438
 login=\u041f\u0440\u0438\u043d\u044f\u0442\u044c
 title.welcome=\u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c
 message.welcome=\u0414\u043e\u0431\u0440\u043e \u043f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432
+label.login.password=\u041f\u0430\u0440\u043e\u043b\u044c:
+label.login.name=\u0418\u043c\u044f:
+message.hello=\u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439,
+button.customers=\u041f\u043e\u043a\u0443\u043f\u0430\u0442\u0435\u043b\u0438
