--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -74,3 +74,4 @@ label.login.password=\u041f\u0430\u0440\u043e\u043b\u044c:
 label.login.name=\u0418\u043c\u044f:
 message.hello=\u0417\u0434\u0440\u0430\u0432\u0441\u0442\u0432\u0443\u0439,
 button.customers=\u041f\u043e\u043a\u0443\u043f\u0430\u0442\u0435\u043b\u0438
+header.administration=\u0421\u043f\u0440\u0430\u0432\u043e\u0447\u043d\u0438\u043a\u0438
