--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 
 # Resource strings used by the <stripes:errors> tag when there are no nested tags
-stripes.errors.header=<div style="color:#b72222; font-weight: bold">Please fix the following errors:</div><ol>
+stripes.errors.header=<div style="color:#b72222; font-weight: bold">\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430, \u0438\u0441\u043f\u0440\u0430\u0432\u044c\u0442\u0435 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0435 \u043e\u0448\u0438\u0431\u043a\u0438:</div><ol>
 stripes.errors.beforeError=<li style="color: #b72222;">
 stripes.errors.afterError=</li>
 stripes.errors.footer=</ol>
@@ -38,15 +38,15 @@ stripes.messages.footer=</ul>
 #      3: age.errorMessage
 #      4: /user/Profile.action.invalidNumber
 #      5: converter.number.invalidNumber
-converter.number.invalidNumber=The value ({1}) entered in field {0} must be a valid number
-converter.byte.outOfRange=The value ({1}) entered in field {0} was out of the range {2} to {3}
-converter.short.outOfRange=The value ({1}) entered in field {0} was out of the range {2} to {3}
-converter.integer.outOfRange=The value ({1}) entered in field {0} was out of the range {2} to {3}
-converter.float.outOfRange=The value ({1}) entered in field {0} was out of the range {2} to {3}
-converter.enum.notAnEnumeratedValue=The value "{1}" is not a valid value for field {0}
-converter.date.invalidDate=The value ({1}) entered in field {0} must be a valid date
-converter.email.invalidEmail=The value ({1}) entered is not a valid email address
-converter.creditCard.invalidCreditCard=The value ({1}) entered is not a valid credit card number
+converter.number.invalidNumber=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0447\u0438\u0441\u043b\u043e\u043c
+converter.byte.outOfRange=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0432\u044b\u0445\u043e\u0434\u0438\u0442 \u0438\u0437 \u0434\u0438\u0430\u043f\u0430\u0437\u043e\u043d\u0430 {2} ... {3}
+converter.short.outOfRange=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0432\u044b\u0445\u043e\u0434\u0438\u0442 \u0438\u0437 \u0434\u0438\u0430\u043f\u0430\u0437\u043e\u043d\u0430 {2} ... {3}
+converter.integer.outOfRange=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0432\u044b\u0445\u043e\u0434\u0438\u0442 \u0438\u0437 \u0434\u0438\u0430\u043f\u0430\u0437\u043e\u043d\u0430 {2} ... {3}
+converter.float.outOfRange=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0432\u044b\u0445\u043e\u0434\u0438\u0442 \u0438\u0437 \u0434\u0438\u0430\u043f\u0430\u0437\u043e\u043d\u0430 {2} ... {3}
+converter.enum.notAnEnumeratedValue=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 "{1}" \u043d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e \u0434\u043b\u044f \u043f\u043e\u043b\u044f {0}
+converter.date.invalidDate=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1})  \u0432\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0432 \u043f\u043e\u043b\u0435 {0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0434\u0430\u0442\u043e\u0439
+converter.email.invalidEmail=\u0412\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u044b\u043c \u0430\u0434\u0440\u0435\u0441\u043e\u043c
+converter.creditCard.invalidCreditCard=\u0412\u0432\u043e\u0434\u0438\u043c\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 ({1}) \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u043d\u043e\u043c\u0435\u0440\u043e\u043c \u043a\u0440\u0435\u0434\u0438\u0442\u043d\u043e\u0439 \u043a\u0430\u0440\u0442\u044b
 
 # Validation error messages produced by Stripes' annotation based validations. These
 # are default error messages and can be overridden on per-field and per-form levels.
@@ -57,14 +57,14 @@ converter.creditCard.invalidCreditCard=The value ({1}) entered is not a valid cr
 #      3: username.errorMessage
 #      4: /user/Register.action.valueNotPresent
 #      5: validation.required.valueNotPresent
-validation.required.valueNotPresent={0} is a required field
-validation.minlength.valueTooShort={0} must be at least {2} characters long
-validation.maxlength.valueTooLong={0} must be no more than {2} characters long
-validation.minvalue.valueBelowMinimum=The minimum allowed value for {0} is {2}
-validation.maxvalue.valueAboveMaximum=The maximum allowed value for {0} is {2}
-validation.mask.valueDoesNotMatch=<em>{1}</em> is not a valid {0}
-validation.expression.valueFailedExpression=The value supplied ({1}) for field {0} is invalid
-validation.file.postBodyTooBig=Total upload size of {3} KB exceeds the maximum size of {2} KB
+validation.required.valueNotPresent={0} \u043e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u043f\u043e\u043b\u0435
+validation.minlength.valueTooShort={0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u043d\u0435 \u043c\u0435\u043d\u0435\u0435 {2} \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
+validation.maxlength.valueTooLong={0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u043d\u0435 \u0431\u043e\u043b\u0435\u0435 {2} \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
+validation.minvalue.valueBelowMinimum={2} \u043c\u0438\u043d\u0438\u043c\u0430\u043b\u044c\u043d\u043e \u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0434\u043b\u044f {0}
+validation.maxvalue.valueAboveMaximum={2} \u043c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e \u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0434\u043b\u044f {0}
+validation.mask.valueDoesNotMatch=<em>{1}</em> \u043d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e \u0434\u043b\u044f {0}
+validation.expression.valueFailedExpression=\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435, \u0443\u043a\u0430\u0437\u0430\u043d\u043d\u043e\u0435 ({1}) \u0434\u043b\u044f \u043f\u043e\u043b\u044f {0} \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u043d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u044b\u043c
+validation.file.postBodyTooBig=\u041e\u0431\u0449\u0438\u0439 \u0437\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u043c\u044b\u0439 \u043e\u0431\u044a\u0451\u043c {3} KB \u043f\u0440\u0435\u0432\u044b\u0448\u0430\u0435\u0442 \u043c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440 {2} KB
 
 button.login=\u0412\u043e\u0439\u0442\u0438
 login=\u041f\u0440\u0438\u043d\u044f\u0442\u044c
