--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -84,6 +84,8 @@ label.title=\u0413\u043b\u0430\u0432\u043d\u0430\u044f
 label.info.server=\u0421\u0435\u0440\u0432\u0435\u0440
 label.info.language=\u042f\u0437\u044b\u043a
 label.info.country=\u0421\u0442\u0440\u0430\u043d\u0430
+label.info.java.version=\u0412\u0435\u0440\u0441\u0438\u044f Java
+label.info.os=\u041e\u043f\u0435\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u0430\u044f \u0441\u0438\u0441\u0442\u0435\u043c\u0430
 label.db.driver=\u0414\u0440\u0430\u0439\u0432\u0435\u0440 \u0431\u0430\u0437\u044b \u0434\u0430\u043d\u043d\u044b\u0445
 label.db.url=URL \u0431\u0430\u0437\u044b \u0434\u0430\u043d\u043d\u044b\u0445
 
