Correct ru translation.

--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -57,7 +57,7 @@ converter.creditCard.invalidCreditCard=\u0412\u0432\u043e\u0434\u0438\u043c\u043
 #      3: username.errorMessage
 #      4: /user/Register.action.valueNotPresent
 #      5: validation.required.valueNotPresent
-validation.required.valueNotPresent={0} \u043e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u043f\u043e\u043b\u0435
+validation.required.valueNotPresent={0} \u043e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u043f\u043e\u043b\u0435 \u0434\u043b\u044f \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u044f
 validation.minlength.valueTooShort={0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u043d\u0435 \u043c\u0435\u043d\u0435\u0435 {2} \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
 validation.maxlength.valueTooLong={0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u043d\u0435 \u0431\u043e\u043b\u0435\u0435 {2} \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
 validation.minvalue.valueBelowMinimum={2} \u043c\u0438\u043d\u0438\u043c\u0430\u043b\u044c\u043d\u043e \u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0434\u043b\u044f {0}
