--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -110,3 +110,18 @@ label.customer.phone2=\u0422\u0435\u043b\u0435\u0444\u043e\u043d \u0434\u043e\u0
 label.customer.fax=\u0424\u0430\u043a\u0441
 label.customer.contact=\u041a\u043e\u043d\u0442\u0430\u043a\u0442\u044b
 label.customer.general=\u041e\u0441\u043d\u043e\u0432\u043d\u043e\u0435
+label.product.name=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
+label.product.reference=\u0410\u0440\u0442\u0438\u043a\u0443\u043b
+label.product.code=\u0428\u0442\u0440\u0438\u0445-\u043a\u043e\u0434
+label.product.pricesell=\u0426\u0435\u043d\u0430
+label.product.priceselltax=\u0426\u0435\u043d\u0430 \u0441 \u043d\u0430\u043b\u043e\u0433\u043e\u043c
+label.product.category.name=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f
+label.product.tax.name=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f \u043d\u0430\u043b\u043e\u0433\u0430
+label.product.tax.rate=\u0421\u0442\u0430\u0432\u043a\u0430 \u043d\u0430\u043b\u043e\u0433\u0430
+label.product.tax.amount=\u0421\u0443\u043c\u043c\u0430 \u043d\u0430\u043b\u043e\u0433\u0430
+label.nav.home=\u0413\u043b\u0430\u0432\u043d\u0430\u044f
+label.nav.about=\u041e \u043c\u0430\u0433\u0430\u0437\u0438\u043d\u0435
+label.nav.terms=\u0423\u0441\u043b\u043e\u0432\u0438\u044f
+label.buy=\u041a\u0443\u043f\u0438\u0442\u044c
+label.products=\u0422\u043e\u0432\u0430\u0440\u044b
+label.productcategories=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0438
