--- a/res/StripesResources_ru_RU.properties
+++ b/res/StripesResources_ru_RU.properties
@@ -125,3 +125,4 @@ label.nav.terms=\u0423\u0441\u043b\u043e\u0432\u0438\u044f
 label.buy=\u041a\u0443\u043f\u0438\u0442\u044c
 label.products=\u0422\u043e\u0432\u0430\u0440\u044b
 label.productcategories=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0438
+label.sell=\u041f\u0440\u043e\u0434\u0430\u0442\u044c
